compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized_with_compile_time_evaluation.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<0:8>>\n  <<4000:16>>\n  <<80_000:16>>\n  <<-80_000:16>>\n  <<-1:48>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<0:8>>
  <<4000:16>>
  <<80_000:16>>
  <<-80_000:16>>
  <<-1:48>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

function go() {
  toBitArray([0]);
  toBitArray([15, 160]);
  toBitArray([56, 128]);
  toBitArray([199, 128]);
  return toBitArray([255, 255, 255, 255, 255, 255]);
}
