compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__unit_with_bits_option.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:bits-size(4)-unit(8)>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:bits-size(4)-unit(8)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  return toBitArray([bitArraySlice(x, 0, 32)]);
}
