compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__utf16.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<\"Hello, world!\":utf16>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  <<"Hello, world!":utf16>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf16 } from "../gleam.mjs";

export function main() {
  return toBitArray([stringToUtf16("Hello, world!", true)]);
}
