compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__utf32_codepoint_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(codepoint) {\n  <<codepoint:utf32_codepoint-little>>\n}\n"
---
----- SOURCE CODE

pub fn go(codepoint) {
  <<codepoint:utf32_codepoint-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, codepointToUtf32 } from "../gleam.mjs";

export function go(codepoint) {
  return toBitArray([codepointToUtf32(codepoint, false)]);
}
