compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__utf32_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<\"Hello, world!\":utf32-little>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  <<"Hello, world!":utf32-little>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringToUtf32 } from "../gleam.mjs";

export function main() {
  return toBitArray([stringToUtf32("Hello, world!", false)]);
}
